tests/paczka2/big_fuzzy/18707170.err
Error in line 7: GqZ S924 42,3
Error in line 9: GqZ S97 31,9
Error in line 23: GqZ S924 24,3
Error in line 25: SyoUGuAlzK A869 30,0
Error in line 34: GqZ S924 56,7
Error in line 26: SyoUGuAlzK S924 22,7
Error in line 35: QZUI0Gxm A406 47,7
Error in line 38: LIS8wc A869 71,8
Error in line 55: U4lvbRE3 A406 22,6
Error in line 60: U4lvbRE3 S924 81,8
Error in line 59: GqZ S97 0,1
Error in line 41: QZUI0Gxm A869 74,0
Error in line 65: GqZ S97 18,8
Error in line 69: GqZ A869 83,3
Error in line 71: GqZ A406 30,3
Error in line 70: S924 S97 88,0
Error in line 82: S924 A406 36,73
Error in line 87: S924 A869 2,88
Error in line 79: Mou A406 91,0
Error in line 91: Mou A869 22,8
Error in line 75: QZUI0Gxm S924 27,8
Error in line 92: Mou A406 99,2
Error in line 93: QZUI0Gxm A406 74,6
Error in line 99: QZUI0Gxm S924 26,9
Error in line 88: GqZ S924 118,3
Error in line 109: U4lvbRE3 A406 70,1
Error in line 117: SyoUGuAlzK A869 71,5
Error in line 132: GqZ S97 50,6
Error in line 142: SyoUGuAlzK A869 88,7
Error in line 151: S924 S97 9,9
Error in line 155: U4lvbRE3 S97 -1,5
Error in line 154: GqZ A869 51,3
Error in line 158: SyoUGuAlzK S924 6,7
Error in line 165: QZUI0Gxm S924 32,3
Error in line 166: U4lvbRE3 A406 55,1
Error in line 168: QZUI0Gxm A406 20,6
Error in line 161: GqZ A406 34,5
Error in line 184: LIS8wc A406 v7,6
Error in line 186: SyoUGuAlzK A406 64,8
Error in line 195: LIS8wc A406 47,8
Error in line 201: SyoUGuAlzK S924 85,4
Error in line 207: QZUI0Gxm A869 5,92
Error in line 204: SyoUGuAlzK A869 23,0
Error in line 230: SyUGuAlzK A406 74,7
Error in line 236: QZUI0Gxm A406 86,4
Error in line 218: SyoUGuAlzK A406 18,9
Error in line 244: QZUI0Gxm A406 85,6
